objects/Strategy_Session_Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>X3rd_Property_Value__c</fullName>
        <label>3rd Property Value</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Property__c</fullName>
        <label>3rd Property</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Property_ownership_held_by__c</fullName>
        <label>3rd Property ownership held by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_date_of_purchase__c</fullName>
        <label>3rd date of purchase</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_of_classes_Attended__c</fullName>
        <label>3rd # of classes Attended</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_of_classes_purchased__c</fullName>
        <label>3rd # of classes purchased</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_other_expense__c</fullName>
        <label>3rd other expense</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4th_Property_Equity__c</fullName>
        <label>4th Property Equity</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4th_Property_Owned__c</fullName>
        <label>4th Property % Owned</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4th_Property_ownership_held_by__c</fullName>
        <label>4th Property ownership held by</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_of_2nd_Expense__c</fullName>
        <label>Year of 2nd Expense</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_of_3rd_Expense__c</fullName>
        <label>Year of 3rd Expense</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_of_Expense__c</fullName>
        <label>Year of Expense</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Children__c</fullName>
        <label># of Children:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Classes_Attended__c</fullName>
        <label># of Classes Attended</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Classes_Purchased__c</fullName>
        <label># of Classes Purchased</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Strategy Session Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Hackler</fullName>
        <columns>NAME</columns>
        <columns>Account_Lookup__c</columns>
        <columns>Client_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Hackler,Burg</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <label>Hackler</label>
    </listViews>
    <listViews>
        <fullName>SSQ_s</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DocParser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SSQ&apos;s</label>
    </listViews>
    <nameField>
        <label>Strategy Session Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategy Session Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>